@@ -1,0 +1,60 @@
+package SPVM::Native::Fn;
+
+1;
+
+=head1 NAME
+
+SPVM::Native::Fn - SPVM Starndard Functions that is writed by native language
+
+=head1 CLASS METHODS
+
+=head2 DBL_MAX
+
+=head2 DBL_MIN
+
+=head2 FLT_MAX
+
+=head2 FLT_MIN
+
+=head2 RAND_MAX
+
+=head2 crand
+
+=head2 memcpy_byte
+
+=head2 memcpy_double
+
+=head2 memcpy_float
+
+=head2 memcpy_int
+
+=head2 memcpy_long
+
+=head2 memcpy_short
+
+=head2 memmove_byte
+
+=head2 memmove_double
+
+=head2 memmove_float
+
+=head2 memmove_int
+  
+=head2 memmove_long
+  
+=head2 memmove_short
+
+=head2 new_array_proto
+
+=head2 srand
+
+=head2 to_float
+
+=head2 to_int
+
+=head2 to_int_with_base
+
+=head2 to_long
+
+=head2 to_long_with_base
+
